# langfuse-mcp

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  ecosystem.config.js  pyproject.toml
langfuse_mcp/: __init__.py  client.py  observability.py  server.py
langfuse_mcp/tools/: generations.py  scores.py  sessions.py  traces.py
tests/: conftest.py  test_client.py
