[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langfuse-mcp"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
observability = [
    "influxdb-client>=1.40",
    "nats-py>=2.0",
]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
langfuse-mcp = "langfuse_mcp.server:main"

[tool.setuptools.packages.find]
include = ["langfuse_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
